Fix navbar bugs and add nav menu collapse on link click.

--- a/src/components/Re-usable/Navbar/Navbar.css
+++ b/src/components/Re-usable/Navbar/Navbar.css
@@ -25,6 +25,7 @@
     margin:0;
     color: #080808 !important;
     font-size: 100%;
+    cursor: pointer;
 }
 
 .nav-link {
